--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-.blue{
-    color: blue;
+.box1{
+    width: 500px;
+    height: 200px;
+    border: 2px dashed #666;
 }
-.red{
-    color: red;
+.box2{
+    width: 100%;
+    padding: 10px;
+    background-color: #fff4c3;
+    border: 3px solid #ff8410;
 }
