--- a/style.css
+++ b/style.css
@@ -10,3 +10,9 @@
     border: 3px solid #ff8410;
     box-sizing: border-box;
 }
+
+@media screen and(max-width: 768px){
+    .box{
+        background-color: green;
+    }
+}
