--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ header{
 
 footer{
     width: 100%;
+    background-color: #444;
+    text-align: center;
+    padding: 26px 0;
+    color: #fff;
 }
 
 a{
@@ -35,3 +39,4 @@ a{
     color: #0ba;
 } /* カーソルを合わせたときの装飾指定　*/
 
+}
